fix(add-task-page): right wrapper stuck behind left wrapper

--- a/src/app/features/add-task-page/add-task-page.component.scss
+++ b/src/app/features/add-task-page/add-task-page.component.scss
@@ -4,6 +4,7 @@
 :host {
   height: calc(100% - $header-height);
   display: block;
+  overflow-y: scroll;
 
   @include breakpoint-down("lg") {
     height: calc(100% - $header-height - $footer-height);
@@ -19,7 +20,6 @@
 }
 
 .content-wrapper {
-    height: 100%;
-    overflow-y: scroll;
+    min-height: 500px;
     background-color: $color-primary-bg;
 }
